@@ -1,3 +1,10 @@
+2012-08-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-find-file-exists-command): Protect the tests
+	by `ignore-error'.
+	(tramp-find-shell): Open also a new shell, when cache is already
+	set.  Reported by Carsten Bormann <cabo@tzi.org>.  (Bug#12148)
+
 2012-07-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-restricted-shell-hosts-alist): New defcustom.
